--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "illuminate/support": "^7.5",
         "illuminate/queue": "^7.5",
         "stomp-php/stomp-php": "^4.5",
-        "illuminate/contracts": "^7.5"
+        "illuminate/contracts": "^7.5",
+        "laravel/horizon": "^4.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
