--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
-        "illuminate/support": "^7.5",
-        "illuminate/queue": "^7.5",
-        "stomp-php/stomp-php": "^4.5",
-        "illuminate/contracts": "^7.5",
-        "laravel/horizon": "^4.3"
+        "illuminate/support": "^8.0",
+        "illuminate/queue": "^8.0",
+        "illuminate/contracts": "^8.0",
+        "laravel/horizon": "^4.3",
+        "stomp-php/stomp-php": "^4.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
