--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
-        "illuminate/support": "^8.0",
-        "illuminate/queue": "^8.0",
-        "illuminate/contracts": "^8.0",
+        "laravel/framework": "^8.0",
         "laravel/horizon": "^5.0",
         "stomp-php/stomp-php": "^4.5"
     },
