--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,19 @@
         "stomp-php/stomp-php": "^4.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "mockery/mockery": "^1.3.1"
+        "phpunit/phpunit": "^9.4",
+        "mockery/mockery": "^1.3.1",
+        "fakerphp/faker": "^1.9.1",
+        "orchestra/testbench": "^6.0"
     },
     "autoload": {
         "psr-4": {
             "Asseco\\Stomp\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Asseco\\Stomp\\Tests\\": "tests/"
         }
     },
     "extra": {
