--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4",
+        "php": "^7.4 || ^8.0",
         "laravel/framework": "^8.0",
         "laravel/horizon": "^5.0",
         "stomp-php/stomp-php": "^4.5"
