--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "^7.4 || ^8.0",
         "laravel/framework": "^8.0",
         "laravel/horizon": "^5.0",
-        "stomp-php/stomp-php": "^4.5"
+        "stomp-php/stomp-php": "^4.5",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4",
