--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,17 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4 || ^8.0",
-        "laravel/framework": "^8.0",
+        "php": "^8.0",
+        "laravel/framework": "^9.0",
         "laravel/horizon": "^5.0",
-        "stomp-php/stomp-php": "^4.5",
+        "stomp-php/stomp-php": "^5.0",
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.4",
-        "mockery/mockery": "^1.3.1",
+        "phpunit/phpunit": "^9.5",
+        "mockery/mockery": "^1.4.4",
         "fakerphp/faker": "^1.9.1",
-        "orchestra/testbench": "^6.0"
+        "orchestra/testbench": "^7.4"
     },
     "autoload": {
         "psr-4": {
