--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
+          php-version: '8.2'
           extensions: mbstring, intl
           ini-values: post_max_size=256M, max_execution_time=180
           coverage: xdebug
@@ -34,7 +34,7 @@ jobs:
             ${{ runner.os }}-php-
 
       - name: Install dependencies
-        if: steps.composer-cache.outputs.cache-hit != 'true'
+        #if: steps.composer-cache.outputs.cache-hit != 'true'
         run: composer install --prefer-dist --no-progress --no-suggest
 
       - name: Execute PHPUnit tests
@@ -44,6 +44,7 @@ jobs:
       - name: PHP STatic ANalyser (phpstan)
         uses: php-actions/phpstan@v3
         with:
+          version: latest
           path: 'src'
-          php_version: '8.1'
+          php_version: '8.2'
           level: 0
